<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.android.tarantinoquiz.Q10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/ImageQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/q10" />

        <TextView
            style="@style/TextQuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q10_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginLeft="@dimen/checkBoxMargin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q10_1_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_1" />

                <CheckBox
                    android:id="@+id/q10_2_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_2" />

                <CheckBox
                    android:id="@+id/q10_3_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q10_4_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_4" />

                <CheckBox
                    android:id="@+id/q10_5_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_5" />

                <CheckBox
                    android:id="@+id/q10_6_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_6" />

            </LinearLayout>
        </LinearLayout>


        <Button
            style="@style/NextQuestionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToSubmit"
            android:text="@string/SubmitAnswers" />

    </LinearLayout>

</ScrollView>
