<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.android.tarantinoquiz.Q4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/ImageQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/q4" />

        <TextView
            style="@style/TextQuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4_text" />

        <RadioGroup
            style="@style/RadioQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_1_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ4"
                android:text="@string/q4_1" />

            <RadioButton
                android:id="@+id/q4_2_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ4"
                android:text="@string/q4_2" />

            <RadioButton
                android:id="@+id/q4_3_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ4"
                android:text="@string/q4_3" />

            <RadioButton
                android:id="@+id/q4_4_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ4"
                android:text="@string/q4_4" />
        </RadioGroup>

        <Button
            style="@style/NextQuestionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToQ5"
            android:text="@string/NextQuestionButton" />

    </LinearLayout>

</ScrollView>
