<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.android.tarantinoquiz.Q1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/ImageQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/q1" />

        <TextView
            style="@style/TextQuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_text" />

        <RadioGroup
            style="@style/RadioQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_1_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ1"
                android:text="@string/q1_1" />

            <RadioButton
                android:id="@+id/q1_2_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ1"
                android:text="@string/q1_2" />

            <RadioButton
                android:id="@+id/q1_3_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ1"
                android:text="@string/q1_3" />

            <RadioButton
                android:id="@+id/q1_4_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkQ1"
                android:text="@string/q1_4" />
        </RadioGroup>

        <Button
            android:id="@+id/q1_next_button"
            style="@style/NextQuestionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToQ2"
            android:text="@string/NextQuestionButton" />

    </LinearLayout>

</ScrollView>
