<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.android.tarantinoquiz.Q3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/ImageQuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/q3" />

        <TextView
            style="@style/TextQuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_text" />

       <EditText
           android:id="@+id/enterAnswer_q3"
           style="@style/EnterAnswerStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
           android:hint="@string/hint"/>

        <Button
            style="@style/NextQuestionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToQ4"
            android:text="@string/NextQuestionButton" />

    </LinearLayout>

</ScrollView>
